Fix BUG#2269: Lost connect if stored procedure called before USE (And some minor correction of cursor open)